# CI_22-23_301196

./: README.md  pyproject.toml
Quarto/: main.py
lab1/: README.md  lab1.py
lab2/: README.md  lab2.py  pyproject.toml
lab3/: README.md  lab3.py  lab3_part2.py
