[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Federico Siviero s301196 <s301196@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
